js/js.translator/testData/incremental/invalidation/circleExportsUpdate/lib1/f1.kt
fun f1_1() = "f1_1"

fun f1_2() = f2_2()

fun f1_3() = f2_3()

fun f1_4() = "something"
